# activities/urls.py
@@ -4,6 +4,8 @@ from .views import (
     ActivityDetailView,
     ActivityCancelView,
     RecommendedActivitiesView,
+    SavedActivitiesView,
+    SavedActivityDetailView,
 )
 
 urlpatterns = [
@@ -11,4 +13,6 @@ urlpatterns = [
     path('activities/recommended', RecommendedActivitiesView.as_view()),
     path('activities/<int:activity_id>', ActivityDetailView.as_view()),
     path('activities/<int:activity_id>/cancel', ActivityCancelView.as_view()),
+    path('me/saved-activities', SavedActivitiesView.as_view()),
+    path('me/saved-activities/<int:activity_id>', SavedActivityDetailView.as_view()),
 ]
